<package>
  <name>cannon_comm</name>
  <version>1.0.0</version>
  <description>cannon_comm</description>

  <maintainer email="10515668@qq.com">flx</maintainer>

  <author>flx</author>
  <license>ASL 2.0</license>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
